// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBadge tone: action renders correctly 1`] = `
<div>
  <span
    class="css-14c2gvn-boxStyles-NotificationBadge"
  >
    5
  </span>
</div>
`;

exports[`NotificationBadge tone: neutral renders correctly 1`] = `
<div>
  <span
    class="css-zgle0n-boxStyles-NotificationBadge"
  >
    5
  </span>
</div>
`;
